some vars and stuff

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <h3>Container</h3><br>
         <div class="row">
           <div class="col-md-6">
-            <p>column r1 </p>
-            <div id="lettersRemaining"></div>
-            <p>column r1 </p>
-            <div id="lettersGuessed"></div>
+            <div id="quiz"></div>
+            <button id="submit">Submit Quiz</button>
+            <div id="results"></div>
             
           </div>
           <div class="col-md-6"> 
