--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="row">
           <div class="col-md-6">
             <div id="quiz"></div>
-            <button id="submit">Submit Quiz</button>
+            <div id="buttons-view"></div>
             <div id="results"></div>
             
           </div>
           <div class="col-md-6"> 
             <h4>column r1 </h4>
             <div id="currentWord"></div>
-            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:80%" alt="Image">
           </div>
         </div>
         <div class="row">
@@ -40,6 +40,6 @@
       </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="assets/javascript/game.js" type="text/javascript"></script>
+    <script src="assets/javascript/app.js" type="text/javascript"></script>
 </body>
 </html>
