quiz works - no feedback

--- a/index.html
+++ b/index.html
@@ -11,33 +11,18 @@
 <body>
     
     <div class="container-fluid bg-3 text-center">    
-        <h3>Container</h3><br>
+        <h1>Blahblah Trivia Game</h1><br>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div id="quiz"></div>
             <div id="buttons-view"></div>
             <div id="results"></div>
             
           </div>
-          <div class="col-md-6"> 
-            <h4>column r1 </h4>
-            <div id="currentWord"></div>
-            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:80%" alt="Image">
+          <div class="col-md-4"> 
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-3"></div>
-          <div class="col-md-3">
-            <p>column r2</p>
-            <div id="numWins"></div>
-          </div>
-          <div class="col-md-3">
-            <p>column r2 </p>
-            <div id="numLoss"></div>
-          </div>
-          <div class="col-md-3"></div>
-        </div>
-      </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js" type="text/javascript"></script>
