--- a/index.html
+++ b/index.html
@@ -4,25 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Trivial Trivia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     
-    <div class="container-fluid bg-3 text-center">    
-        <h1>Blahblah Trivia Game</h1><br>
+  <div class="container-fluid bg-3 text-center" id="quiz">    
+   
+      <h1>Doggo Trivia Game</h1><br>
         <div class="row">
-          <div class="col-md-8">
-            <div id="quiz"></div>
-            <div id="buttons-view"></div>
-            <div id="results"></div>
-            
+            <div class="col-md-1"></div>
+          <div class="col-md-6">
+                <div id="correct"></div>
+              <div id="question"></div>
+              <div id="buttons-view"></div>
           </div>
+
           <div class="col-md-4"> 
-            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            <div id="timer"></div> <br>
+            <div id="results"> </div> <br>
+            <div id="image-holder"></div>
           </div>
+          <div class="col-md-1"></div>
         </div>
+
+        <div class="row">
+
+          <div class="col-md-12">
+            <button id="next-question">Next question</button>
+          </div>
+
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js" type="text/javascript"></script>
